--- a/notebooks/finetune_kanana_legal.ipynb
+++ b/notebooks/finetune_kanana_legal.ipynb
@@ -1522,8 +1522,11 @@
    "name": "python"
   },
   "widgets": {
-   "state": {},
-   "version": "1.2.0"
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
